# queueue

./: .gitignore  example-setup.sh  gqless.config.cjs  gqty.config.cjs  index.html  package-lock.json  package.json  schema.gql  tailwind.config.js  tsconfig.json  vite.config.js  webpack.config.js
server/: Cargo.toml
server/src/: main.rs
src/: App.tsx  api.ts  data.ts  env.d.ts  graphql-zeus.ts  index.html  main.tsx  styles.css
src/gqless/: index.ts  schema.generated.ts
src/gqty/: index.ts  schema.generated.ts
src/zeus/: const.ts  index.ts
