[package]
name = "server"
version = "0.1.0"
authors = ["Oliver Bøving <oliverboving@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-graphql = "2.9"
async-graphql-tide = "2.9"
